# password-cracking

./: .gitignore  PROJECT.md  README.md  pyproject.toml
data/: hash_rates.json  l33t_table.json
data/keyboards/: dvorak.json  keypad.json  qwerty.json
data/masks/: common_masks.json
data/wordlists/: common_passwords.txt  english_words.txt  names.txt  surnames.txt
docs/: 01-project-overview.md  02-requirements.md  03-use-cases.md  04-architecture.md  05-estimator-specs.md  06-data-and-models.md  07-implementation-roadmap.md  08-validation-strategy.md  09-open-questions.md  10-references.md  index.md  solved-issues.md
docs/research/: README.md
docs/research/cmu-guess-calculator/: background.md  clone-repos.sh  report.md
docs/research/password-cracking-benchmarks/: background.md  report.md
docs/research/password-cracking-techniques/: background.md  report.md
docs/research/password-guessing-framework-analysis/: background.md  report.md
docs/research/password-strength-estimators/: background.md  report.md
docs/research/pcfg-analysis/: background.md  report.md
docs/research/uchicago-analytic-cracking/: background.md  report.md
docs/research/zxcvbn-analysis/: background.md  report.md
src/crack_time/: data.py
src/crack_time/analysis/: leet.py
src/crack_time/decomposition/: dp_engine.py
src/crack_time/estimators/: date.py  dictionary.py  leet.py  mask.py  sequence.py
tests/: test_analyzer.py  test_dp_engine.py  test_hardware.py  test_integration.py
tests/test_estimators/: test_brute_force.py  test_date.py  test_leet.py
(+1 files in other folders)
