[project]
name = "password-cracking-workspace"
version = "0.1.0"
description = "Password crack-time simulator monorepo"
requires-python = ">=3.10"

[dependency-groups]
dev = ["pytest>=7.0", "httpx>=0.27.0"]

[tool.uv.workspace]
members = ["packages/crack-time", "packages/api"]

[tool.uv.sources]
crack-time = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages/crack-time/tests", "packages/api/tests"]
addopts = "--import-mode=importlib"
